Checkout Management App/objects/EmailConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting for tracking of what email notifications are enabled, and if they’re enabled for the partner and/or the customer</description>
    <fields>
        <fullName>CustomerAutoRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send a reminder email 5 days before a customer&apos;s subscription is auto-renewed and billed.</description>
        <label>Customer Auto-Renewal Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerCancellationConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send an email to the customer after a cancellation request has been processed.</description>
        <label>Customer Cancellation Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerFreeTrialSignup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a prospective customer signs up for a free trial, send an email introducing your company.</description>
        <label>Customer Free Trial Signup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerLicenseChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When seats are added or removed from a customer&apos;s license, send an email confirming the changes.</description>
        <label>Customer License Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPaymentConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send an email to the customer after a payment is processed.</description>
        <label>Customer Payment Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPaymentDeclined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a customer&apos;s credit card is declined, send an email alerting the customer.</description>
        <label>Customer Payment Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerPurchaseConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a customer buys your offering, send a thank you email confirming the purchase.</description>
        <label>Customer Purchase Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerRefundNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send an email to the customer after a refund has been processed.</description>
        <label>Customer Refund Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerTrialExpiringSoon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send a reminder email 1 day before a prospective customer&apos;s trial expires that explains how to purchase your offering.</description>
        <label>Customer Trial Expiring Soon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogoEmailNotifications__c</fullName>
        <description>Logo for Email Notifications</description>
        <label>Logo for Email Notifications</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerCancellationConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive an email confirming that a customer&apos;s cancellation request has been processed.</description>
        <label>Partner Cancellation Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerCantConnectStripe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive an email when the AppExchange can&apos;t connect to your Stripe account.</description>
        <label>Partner Can&apos;t Connect to Stripe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerFreeTrialExpired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive an email if a free trial expires, but the prospective customer hasn&apos;t started a subscription.</description>
        <label>Partner Free Trial Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerFreeTrialSignup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive an email when a prospective customer signs up for a free trial.</description>
        <label>Partner Free Trial Signup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerLicenseChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive an email when seats are added or removed from a customer&apos;s license.</description>
        <label>Partner License Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerPurchaseConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive an email when a customer buys your offering.</description>
        <label>Partner Purchase Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerTrialExpiringSoon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send a reminder email 1 day before a prospective customer&apos;s trial expires that explains how to purchase your offering.</description>
        <label>Partner Trial Expiring Soon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_License_Discrepancy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive an email when a customer uses more seats than allowed by their license.</description>
        <label>Partner License Discrepancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Payment_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receive an email when a customer&apos;s credit card is declined.</description>
        <label>Partner Payment Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduledJobId__c</fullName>
        <description>The Id of the scheduled apex job (CronTrigger) used for scheduled notification sending.</description>
        <label>Scheduled Notifications Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Email Configuration</label>
</CustomObject>